kubernetes/apps/base/self-hosted/artifactory/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: artifactory
spec:
  hostnames: ["artifactory.jory.dev"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: artifactory
          namespace: self-hosted
          port: 8082
